# ts_watcher

./: .gitignore  .ts_pre_commit_config.yaml  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  overview.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: news_creation.yaml
conda/: meta.yaml
doc/: alarm_list.rst  conf.py  developer_guide.rst  displaying_alarms.rst  documenteer.toml  index.rst  manifest.yaml  revision_history.rst  sphinx_alarm_categorizer.py  squadcast_notes.rst  version_history.rst  writing_rules.rst
doc/lsst.ts.watcher/: index.rst
doc/news/: DM-48621.bugfix.rst  DM-48621.misc.1.rst  DM-48621.misc.2.rst  DM-48621.misc.rst  DM-48625.feature.rst  DM-48716.bugfix.rst  DM-48716.misc.1.rst  DM-48716.misc.rst  DM-49978.bugfix.rst  DM-49978.feature.rst  DM-49978.improvement.rst  DM-50021.feature.rst  DM-50911.bugfix.rst  DM-50911.feature.rst  DM-51055.bugfix.rst  OSW-1039.feature.rst  OSW-1718.perf.rst  OSW-1843.feature.rst  OSW-1848.bugfix.rst  OSW-1909.feature.rst  OSW-2065.feature.rst  OSW-2065.misc.rst  OSW-2065.perf.rst  (+8 more)
kapacitor/: README.rst  watcher_severity_slack.tick  watcher_slack_ncsa.tick  watcher_slack_summit.tick
schema/: Watcher.yaml
tests/: test_alarm.py  test_alarm_rule_runner.py  test_csc.py  test_field_wrapper_list.py  test_filtered_field_wrapper.py  test_filtered_topic_wrapper.py  test_mock_opsgenie.py  test_mock_pagerduty.py  test_mock_squadcast.py  test_model.py  test_remote_info.py  test_remote_wrapper.py  test_threshold_handler.py  test_topic_callback.py  test_watcher_schema.py
ups/: ts_watcher.table
(+223 files in other folders)
