[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_watcher"
description = "A CSC which monitors other SAL components and issues alarms for the Vera C. Rubin Observatory."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { documentation = "https://ts-watcher.lsst.io", source_code = "https://github.com/lsst-ts/ts_watcher" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
command_watcher = "lsst.ts.watcher:command_watcher"
run_watcher = "lsst.ts.watcher:run_watcher"

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
