[flake8]
max-line-length = 110
ignore = E133, E203, E226, E228, N802, N803, N806, W503
exclude =
  bin,
  doc,
  __init__.py,
  tests/.tests

[tool:pytest]
addopts = --black --flake8 --ignore=python/lsst/ts/watcher/version.py
flake8-ignore = E133 E203 E226 E228 N802 N803 N806 W503
asyncio_mode = auto

[metadata]
version = attr: setuptools_scm.get_version
